<resources>
    <string name="app_name">mkb_test</string>
    <string name="Error">Error</string>
    <string name="Reload">Reload</string>
    <string name="buy_for">BUY FOR</string>
    <string name="sell_for">SELL FOR</string>
    <string name="delta">DELTA</string>
    <string name="detailed_rate">Rate detailed info</string>
    <string name="additional_info">Additional info</string>
    <string name="tp_what_is_that">tp</string>
    <string name="basic">basic</string>
</resources>